# forgewise

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .secrets.baseline  ADOPTERS.md  AGENTS.ja.md  AGENTS.ko.md  AGENTS.md  AGENTS.zh.md  BRANDING.ja.md  BRANDING.ko.md  BRANDING.md  BRANDING.zh.md  CHANGELOG.ja.md  CHANGELOG.ko.md  CHANGELOG.md  CHANGELOG.zh.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.ko.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.ja.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  README.zh.md  ROADMAP.md  SECURITY.ja.md  SECURITY.ko.md  SECURITY.md  SECURITY.zh.md  docker-compose.e2e.yml  lefthook.yml  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
charts/forgewise/: Chart.yaml  values.yaml
charts/forgewise/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
docs/: api-reference.ja.md  api-reference.ko.md  api-reference.md  api-reference.zh.md  completion-audit.md  configuration.ja.md  configuration.ko.md  configuration.md  configuration.zh.md  design.md  family.ja.md  family.ko.md  family.md  family.zh.md  installation.ja.md  installation.ko.md  installation.md  installation.zh.md  nvidia-nim-setup.md  references.md  security.md  testing.md  upgrade.ja.md  upgrade.ko.md  upgrade.md  upgrade.zh.md
docs/adr/: 0001-nvidia-nim-optional-provider.md
docs/kb/adr/: 0001-python-stack-override-vs-global-go-standards.md  0002-v3x-stable-baseline.md
docs/plans/governance-and-ops-alignment/: INDEX.md
docs/specs/: 2026-05-21-forgewise-governance-and-ops-alignment-design.md  2026-06-19-forge-okf-durable-design.ko.md  2026-06-19-forge-okf-durable-design.md
forgewise/: __init__.py  analysis.py  audit.py  cli.py  features.py  gitlab_client.py  http_server.py  llm.py  logging.py  mcp_server.py  metrics.py  nim_client.py  oauth.py  protocol.py  repository.py  security.py  smoke_gitlab.py  tools.py
scripts/: gitlab-e2e-seed.sh  release.sh
tests/: conftest.py  test_analysis.py  test_audit.py  test_cli.py  test_e2e_gitlab.py  test_features.py  test_gitlab_client.py  test_governance.py  test_http_server.py  test_llm.py  test_logging.py  test_mcp_server.py  test_metrics.py  test_nim.py  test_oauth.py  test_protocol.py  test_repository.py  test_schema_validation.py  test_smoke_gitlab.py
