[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgewise"
version = "0.1.0"
description = "Open-source MCP-native developer intelligence for code forges"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "keiailab" }]
dependencies = [
    "authlib>=1.6",
    "fastapi>=0.128",
    "httpx>=0.28",
    "uvicorn>=0.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "mypy>=2.0",
]

[project.scripts]
forgewise = "forgewise.cli:main"
forgewise-mcp = "forgewise.mcp_server:main"
forgewise-http = "forgewise.http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["forgewise"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["forgewise"]
branch = true
omit = [
    "forgewise/__init__.py",
    "forgewise/smoke_gitlab.py",  # 라이브 GitLab token 의존, CI 불가
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 70  # alpha phase baseline. 0.2.x 에서 80%+ 목표.

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
