[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgewise"
version = "0.1.0"
description = "Open-source MCP-native developer intelligence for code forges"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "keiailab" }]
dependencies = [
    "authlib>=1.6",
    "fastapi>=0.128",
    "httpx>=0.28",
    "uvicorn>=0.38",
]

[project.urls]
Homepage = "https://github.com/keiailab/forgewise"
Repository = "https://github.com/keiailab/forgewise"
Documentation = "https://github.com/keiailab/forgewise/tree/main/docs"
Changelog = "https://github.com/keiailab/forgewise/blob/main/CHANGELOG.md"
Issues = "https://github.com/keiailab/forgewise/issues"

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.21",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "prometheus-client>=0.21",
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
]

[project.scripts]
forgewise = "forgewise.cli:main"
forgewise-mcp = "forgewise.mcp_server:main"
forgewise-http = "forgewise.http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["forgewise"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "PT", "RUF", "N", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=forgewise --cov-report=term-missing"
